Resolve social icons invisibility

--- a/Scss/_home-page.scss
+++ b/Scss/_home-page.scss
@@ -7,14 +7,13 @@
 }
 
 .navbar {
-    z-index: 18;
+    z-index: 1000;
     padding: .1em 4em;
 	width: 100%;
     @include flexbox(fixed, center, space-between);
 	// background-color: azure;
     background-color: rgba($color: #000000, $alpha: 0.9);
 	box-shadow: 0 0 12px;
-    // background-color: transparent;
     
     .logo{
         letter-spacing: .17em;
@@ -222,7 +221,7 @@
                     border-radius: 50px;
         
                     i {
-                        color: $bodyBgColor;
+                        // color: $bodyBgColor;
                     }
                 }
                 & span {
